--- a/API/Admin/Pages/Banner/GetBanner.razor
+++ b/API/Admin/Pages/Banner/GetBanner.razor
@@ -19,7 +19,7 @@
                 <tr>
                     <td>@item.Id</td>
                     <td>
-                        <img src="@GetImagePath(item.Image)" width="100" />
+                        <img src="@GetImagePath(item.Image)"  width="100" height="100" />
                     </td>
                     <td>@item.Title</td>
                     <td>@item.Status</td>
@@ -36,12 +36,12 @@
 }
 
 @code {
-    string imageBasePath = "http://localhost:49972/images/";
+    string imageBasePath = "http://localhost:49972/images";
 
     string urlBanner = "http://localhost:20714/api/Banners";
     public string FormSubmitMessage { get; set; } = "Banner Not Created";
+    public IEnumerable<Banner> banner { get; set; } = Enumerable.Empty<Banner>();
 
-    public List<Banner> banner { get; set; } = new List<Banner>();
 
     protected async override Task OnInitializedAsync()
     {
@@ -52,11 +52,9 @@
     {
         using (var httpClient = new HttpClient())
         {
-            using (var response = await httpClient.GetAsync(urlBanner))
-            {
-                string apiResponse = await response.Content.ReadAsStringAsync();
-                banner = JsonConvert.DeserializeObject<List<Banner>>(apiResponse);
-            }
+            var response = await httpClient.GetAsync(urlBanner);
+            var apiResponse = await response.Content.ReadAsStringAsync();
+            banner = JsonConvert.DeserializeObject<List<Banner>>(apiResponse);
         }
     }
 
@@ -71,6 +69,6 @@
         }
         await CallAPI();
     }
-    private string GetImagePath(string imageName) => $"{imageBasePath}{imageName}";
 
+    private string GetImagePath(string imageName) => $"{imageBasePath}/{imageName}";
 }
