--- a/API/Admin/Pages/Blog/CreateBlog.razor
+++ b/API/Admin/Pages/Blog/CreateBlog.razor
@@ -2,30 +2,30 @@
 @using System.Text
 <link href="/validation.css" rel="stylesheet" />
 
-<h2 class="text-success p-2">@FormSubmitMessage</h2>
 <EditForm Model="BlogData" OnValidSubmit="CreateeeBanner">
     <DataAnnotationsValidator />
     <ValidationSummary />
     <h1>Thêm Bài Viết</h1>
 
     <div class="form-group">
-        <label class="font-weight-bold">Title</label>
+        <label class="font-weight-bold">Tiêu Đề</label>
         <ValidationMessage For="@(() => BlogData.Title)" />
         <InputText class="form-control" @bind-Value="BlogData.Title" />
     </div>
     <div class="form-group">
-        <label class="font-weight-bold">Image</label>
+        <label class="font-weight-bold">Hình Ảnh</label>
         <InputFile OnChange="ChangeHandler" />
     </div>
     <div class="form-group">
-        <label class="font-weight-bold">Status</label>
+        <label class="font-weight-bold">Nội Dung</label>
         <ValidationMessage For="@(() => BlogData.Decription)" />
-        <InputText class="form-control" @bind-Value="BlogData.Decription">
-        </InputText>
+        <InputTextArea class="form-control" @bind-Value="BlogData.Decription">
+        </InputTextArea>
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Submit</button>
     </div>
+    <p class="text-success p-2 mx-auto">@FormSubmitMessage</p>
 </EditForm>
 
 <p>@apiResponse</p>
@@ -35,7 +35,7 @@
     string url = "http://localhost:20714/api/Blogs/UploadFile";
     private Blog BlogData = new Blog();
     Blog ReceivedBlog;
-    public string FormSubmitMessage { get; set; } = "Reservation Not Created";
+    public string FormSubmitMessage { get; set; } = null;
     public string apiResponse { get; set; }
     public IBrowserFile F;
 
@@ -60,13 +60,13 @@
                     var response = await httpClient.PostAsync(url, content);
                     response.EnsureSuccessStatusCode();
                     apiResponse = await response.Content.ReadAsStringAsync();
-                    FormSubmitMessage = "Banner Created";
+                    FormSubmitMessage = "Thêm thành công";
                 }
             }
         }
         else
         {
-            apiResponse = "Please select a file to upload.";
+            apiResponse = "Vui lòng chọn hình ảnh";
         }
     }
 }
