--- a/API/Admin/Pages/ProductPage/Get.razor
+++ b/API/Admin/Pages/ProductPage/Get.razor
@@ -1,42 +1,48 @@
 ﻿@page "/getproduct"
-<PageTitle>get role</PageTitle>
-<h3>Get</h3>
+<p> <a href="createproduct">Thêm Sản phẩm</a></p>
+<div class="panel panel-primary">
+    <!-- Default panel contents -->
+    <div class="panel-heading"><h2>Thông tin sản phẩm</h2></div>
 
-<table>
-    <tr>
-        <th>Tên Sản Phẩm</th>
-        <th>Hình Ảnh</th>
-        <th>Đánh giá</th>
-        <th>Danh Mục</th>
-        <th>Trạng Thái</th>
-        <th>Khác</th>
-    </tr>
-    @foreach (Product item in product)
-    {
+    <!-- Table -->
+    <table class="table">
         <tr>
-            <td>@item.Name</td>
-            <td>
-                @if (item.Image != null && item.Image.Count > 0)
-                {
-                    <img src="@GetImagePath(item.Image.First().Name)"
-                         width="100" height="100" alt="Product Image">
-                }
-                else
-                {
-                    <span>Không có hình ảnh</span>
-                }
-            </td>
-            <td>@item.Categories.Name</td>
-            <td>@item.Rate</td>
-            <td>@item.StatusID</td>
-            <td>
-                <a href="update/@item.ProductID">
-                   Sửa
-                </a>
-            </td>
+            <th>Tên Sản Phẩm</th>
+            <th>Hình Ảnh</th>
+            <th>Đánh giá</th>
+            <th>Danh Mục</th>
+            <th>Trạng Thái</th>
+            <th>Khác</th>
         </tr>
-    }
-</table>
+        @foreach (Product item in product)
+        {
+            <tr>
+                <td>@item.Name</td>
+                <td>
+                    @if (item.Image != null && item.Image.Count > 0)
+                    {
+                        <img src="@GetImagePath(item.Image.First().Name)"
+                             width="100" height="100" alt="Product Image">
+                    }
+                    else
+                    {
+                        <span>Không có hình ảnh</span>
+                    }
+                </td>
+                <td>@item.Categories.Name</td>
+                <td>@item.Rate</td>
+                <td>@item.StatusID</td>
+                <td>
+                    <a href="update/@item.ProductID">
+                        Sửa
+                    </a>
+                </td>
+            </tr>
+        }
+    </table>
+</div>
+
+
 
 @code {
     string imageBasePath = "http://localhost:49972/images/";
