[Admin] - Chỉnh sửa giao diện Banner, Blog, Image

--- a/API/Admin/Pages/Banner/CreateBanner.razor
+++ b/API/Admin/Pages/Banner/CreateBanner.razor
@@ -6,13 +6,6 @@
     <h1>Thêm bảng hiệu</h1>
 
     <div class="form-group">
-        <label>Image</label>
-        <InputFile OnChange="ChangeHandler" />
-        <div class="text-danger ps-3">
-            <ValidationMessage For="()=>bannerData.Image"></ValidationMessage>
-        </div>
-    </div>
-    <div class="form-group">
         <label class="font-weight-bold">Tiêu đề</label>
         <InputText class="form-control" @bind-Value="bannerData.Title" />
         <div class="text-danger ps-3">
@@ -20,20 +13,27 @@
         </div>
     </div>
     <div class="form-group">
+        <label>Hình Ảnh</label>
+        <InputFile OnChange="ChangeHandler" />
+        <div class="text-danger ps-3">
+            <ValidationMessage For="()=>bannerData.Image"></ValidationMessage>
+        </div>
+    </div>
+    <div class="form-group">
         <label class="font-weight-bold">Trạng thái</label>
         <InputSelect class="form-control" @bind-Value="bannerData.Status">
             <option value="0" selected>Hợp lệ</option>
             <option value="1">Không hợp lệ</option>
-        </InputSelect>       
-       
+        </InputSelect>
+
         <div class="text-danger ps-3">
             <ValidationMessage For="()=>bannerData.Status">
-              
+
             </ValidationMessage>
         </div>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Thêm bảng hiệu</button>
+        <button type="submit" class="btn btn-primary">Thêm Bảng Hiệu</button>
     </div>
     <p class="text-success p-2 ms-auto">@FormSubmitMessage</p>
 
@@ -43,7 +43,7 @@
 @code {
     string url = "http://localhost:20714/api/Banners/UploadFile";
     private Banner bannerData = new Banner();
-    public string FormSubmitMessage { get; set; } = "Reservation Not Created";
+    public string FormSubmitMessage { get; set; } = null;
     public string apiResponse { get; set; }
     public IBrowserFile F;
 
@@ -68,13 +68,13 @@
                     var response = await httpClient.PostAsync(url, content);
                     response.EnsureSuccessStatusCode();
                     apiResponse = await response.Content.ReadAsStringAsync();
-                    FormSubmitMessage = "Banner Created";
+                    FormSubmitMessage = "Thêm thành công";
                 }
             }
         }
         else
         {
-            apiResponse = "Please select a file to upload.";
+            apiResponse = "Vui lòng chọn hình ảnh";
         }
     }
 }
