--- a/API/Admin/Shared/NavMenu.razor
+++ b/API/Admin/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Admin</a>
+    <a class="navbar-brand" href="">Admin | 5Pears</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,18 +13,18 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
             <NavLink class="nav-link" href="/blog">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Blog
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Bài Viết
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/GetBanner">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Bảng Hiệu
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/getimg">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Ảnh Sản Phẩm
             </NavLink>
         </li>
     </ul>
